--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
-        <p class="font-secondary paragraph-lg text-dark">Hi! I'am Trupti Patle from government college of engginerring chandrapur</p>
+        <p class="font-secondary paragraph-lg text-dark">Hi! I'am Trupti Patle From Government college of Engineering Chandrapur</p>
         <a href="about.html" class="btn btn-transparent">know more</a>
       </div>
     </div>
@@ -199,21 +199,21 @@
       </div>
       <div class="col-lg-3 col-md-4 text-center">
         <img src="images/experience/icon-1.png" alt="icon">
-        <p class="mb-0">Jan 2007 - Feb 2009</p>
-        <h4>Junior UX Designer</h4>
-        <h6 class="text-light">WEBEX</h6>
+        <p class="mb-0">July 2018- March 2019</p>
+        <h4>C++ & Java</h4>
+        <h6 class="text-light">COMPLETE</h6>
       </div>
       <div class="col-lg-3 col-md-4 text-center">
         <img src="images/experience/icon-2.png" alt="icon">
-        <p class="mb-0">Mar 2009 - Aug 2014</p>
-        <h4>UX & UI Designer</h4>
-        <h6 class="text-light">AUGMEDIX</h6>
+        <p class="mb-0">July 2019 - Feb 2020</p>
+        <h4>Advance Java & PHP</h4>
+        <h6 class="text-light">COMPLETE</h6>
       </div>
       <div class="col-lg-3 col-md-4 text-center">
         <img src="images/experience/icon-3.png" alt="icon">
-        <p class="mb-0">Sep 2014 - Present</p>
-        <h4>Senior UI Designer</h4>
-        <h6 class="text-light">THEMEFISHER</h6>
+        <p class="mb-0">Sep 2021 - Present</p>
+        <h4>Web Designing & Digital Marketing</h4>
+        <h6 class="text-light">LEARNING BY AVINASH SETH SIR</h6>
       </div>
     </div>
   </div>
@@ -233,45 +233,45 @@
             <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
           </div>
           <div>
-            <p class="text-dark mb-1">2006</p>
-            <h4>Marters in UX Design</h4>
-            <p class="mb-0 text-light">Masassusets Institute of Technology</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 mb-80">
-        <div class="d-flex">
-          <div class="mr-lg-5 mr-3">
-            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
-          </div>
-          <div>
-            <p class="text-dark mb-1">2004</p>
-            <h4>Honours in Fine Arts</h4>
-            <p class="mb-0 text-light">Harvard University</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 mb-80">
-        <div class="d-flex">
-          <div class="mr-lg-5 mr-3">
-            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
-          </div>
-          <div>
-            <p class="text-dark mb-1">2000</p>
-            <h4>Higher Secondary Certificat</h4>
-            <p class="mb-0 text-light">Cardiff School</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 mb-80">
-        <div class="d-flex">
-          <div class="mr-lg-5 mr-3">
-            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
-          </div>
-          <div>
-            <p class="text-dark mb-1">1998</p>
+            <p class="text-dark mb-1">2015</p>
             <h4>Secondary School Certificate</h4>
-            <p class="mb-0 text-light">Cardiff School</p>
+            <p class="mb-0 text-light">Indutai Memorial Highschool Tumsar</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 mb-80">
+        <div class="d-flex">
+          <div class="mr-lg-5 mr-3">
+            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
+          </div>
+          <div>
+            <p class="text-dark mb-1">2017</p>
+            <h4>Higher Secondary Certificate</h4>
+            <p class="mb-0 text-light">GES Junior College Tumsar</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 mb-80">
+        <div class="d-flex">
+          <div class="mr-lg-5 mr-3">
+            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
+          </div>
+          <div>
+            <p class="text-dark mb-1">2020</p>
+            <h4>Diploma in Information Technology</h4>
+            <p class="mb-0 text-light">Vivekanand Polytechnic sitasaongi,Maharastra</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 mb-80">
+        <div class="d-flex">
+          <div class="mr-lg-5 mr-3">
+            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
+          </div>
+          <div>
+            <p class="text-dark mb-1">2021</p>
+            <h4>Bacheloar of Engineeing in Computer Sicence</h4>
+            <p class="mb-0 text-light">Government College of Engineering Chandrapur</p>
           </div>
         </div>
       </div>
@@ -572,7 +572,7 @@
         </div>
         <div class="col-md-4">
           <h5 class="text-light">Phone</h5>
-          <p class="text-white paragraph-lg font-secondary">+91 9823252635</p>
+          <p class="text-white paragraph-lg font-secondary">+91 9800121867</p>
         </div>
         <div class="col-md-4">
           <h5 class="text-light">Address</h5>
