--- a/about.html
+++ b/about.html
@@ -87,8 +87,7 @@
     <div class="row">
       <div class="col-md-8">
         <p>Hello everyone!</p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident.</p>
+        <p>I'am Trupti Patle</p>
         <p>Deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
           accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
           architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia.</p>
