--- a/about.html
+++ b/about.html
@@ -88,9 +88,10 @@
       <div class="col-md-8">
         <p>Hello everyone!</p>
         <p>I'am Trupti Patle</p>
-        <p>Deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia.</p>
+        <p>studies at GEC Chandrapur. I'am 3rd Year Engineering in Computer Science & Engineering.
+          I'am Learning Web Designing & Digital Marketing Under #Techsaksham #SAP & #Microsoft Groups,
+        This Groups in for giving a Best opportunities.
+      Thank You Sir  </p>
       </div>
       <div class="col-md-4 text-center drag-lg-top">
         <div class="shadow-down mb-4">
